tests/compile_fail/boxed_local.stderr
error[E0597]: `scope` does not live long enough
  --> tests/compile_fail/boxed_local.rs:12:44
   |
9  |   let _boxed_local = {
   |       ------------ borrow later stored here
10 |     let scope = pin!(v8::HandleScope::new(&mut scope1));
11 |     let mut scope = scope.init();
   |         --------- binding `scope` declared here
12 |     let scope3 = pin!(v8::HandleScope::new(&mut scope));
   |                                            ^^^^^^^^^^ borrowed value does not live long enough
...
15 |   };
   |   - `scope` dropped here while still borrowed

error[E0716]: temporary value dropped while borrowed
  --> tests/compile_fail/boxed_local.rs:12:18
   |
9  |   let _boxed_local = {
   |       ------------ borrow later stored here
...
12 |     let scope3 = pin!(v8::HandleScope::new(&mut scope));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...
15 |   };
   |   - temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `pin` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0716]: temporary value dropped while borrowed
  --> tests/compile_fail/boxed_local.rs:10:17
   |
9  |   let _boxed_local = {
   |       ------------ borrow later stored here
10 |     let scope = pin!(v8::HandleScope::new(&mut scope1));
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...
15 |   };
   |   - temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `pin` (in Nightly builds, run with -Z macro-backtrace for more info)
